--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/DonViLK/Edit.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/DonViLK/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Models.EF.ThongTinCaNhan
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Nâng cấp quyền";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 <script>
