--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/DonViLK/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/DonViLK/Index.cshtml
@@ -2,7 +2,7 @@
 @using PagedList.Mvc
 @using System.Data;
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Đơn vị liên kết";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
