--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/chiTietDHM/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/chiTietDHM/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Models.EF.chiTietDHM>
 @{
-    ViewBag.Title = "Danh sách đăng ký";
+    ViewBag.Title = "Duyệt đơn vị tham gia";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
