--- a/HiemMauNhanDao/HiemMauNhanDao/Views/KetQuaHienMau/Edit.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/KetQuaHienMau/Edit.cshtml
@@ -98,6 +98,10 @@
                                     @Html.HiddenFor(model => model.idPDKHM, new { htmlAttributes = new { @class = "single-input" } })
                                     @Html.HiddenFor(model => model.idnguoiKham, new { htmlAttributes = new { @class = "single-input" } })
                                     @Html.HiddenFor(model => model.idnguoiLayMau, new { htmlAttributes = new { @class = "single-input" } })
+                                    @Html.HiddenFor(model => model.nguoiKham, new { htmlAttributes = new { @class = "single-input" } })
+                                    @Html.HiddenFor(model => model.nguoiLayMau, new { htmlAttributes = new { @class = "single-input" } })
+
+
                                     @Html.HiddenFor(model => model.tgKham, new { htmlAttributes = new { @class = "single-input" } })
                                     @Html.HiddenFor(model => model.tgLayMau, new { htmlAttributes = new { @class = "single-input" } })
 
@@ -112,7 +116,7 @@
                                     @Html.HiddenFor(model => model.MSD, new { htmlAttributes = new { @class = "single-input" } })
                                     @Html.HiddenFor(model => model.phanUng, new { htmlAttributes = new { @class = "single-input" } })
                                     @Html.HiddenFor(model => model.ghiChu, new { htmlAttributes = new { @class = "single-input" } })
-                                 
+
 
                                 </form>
                                 <div class="text-center " style="margin-top: 20px;">
