--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/CapQuyenNVYT.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/CapQuyenNVYT.cshtml
@@ -91,7 +91,7 @@
                                                 <th class="col-lg-6">
                                                     <div>
                                                         <a>Nghề nghiệp</a>
-                                                        @Html.EditorFor(model => model.coQuanTH, new { htmlAttributes = new { @class = "single-input", @type = "number", @readonly = "readonly" } })
+                                                        @Html.EditorFor(model => model.coQuanTH, new { htmlAttributes = new { @class = "single-input", @type = "text", @readonly = "readonly" } })
 
                                                     </div>
                                                 </th>
@@ -127,7 +127,7 @@
                                                 <th class="col-lg-6">
                                                     <div>
                                                         <a>Cơ quan / trường học </a>
-                                                        @Html.EditorFor(model => model.coQuanTH, new { htmlAttributes = new { @class = "single-input", @type = "number", @readonly = "readonly" } })
+                                                        @Html.EditorFor(model => model.coQuanTH, new { htmlAttributes = new { @class = "single-input", @type = "text", @readonly = "readonly" } })
 
                                                     </div>
                                                 </th>
@@ -177,7 +177,7 @@
                                                 <th class="col-lg-6">
                                                     <div>
                                                         <a>Địa chỉ tạm trú </a>
-                                                        @Html.EditorFor(model => model.diaChi, new { htmlAttributes = new { @class = "single-input", @type = "number", @readonly = "readonly" } })
+                                                        @Html.EditorFor(model => model.diaChi, new { htmlAttributes = new { @class = "single-input", @type = "text", @readonly = "readonly" } })
 
                                                     </div>
                                                 </th>
