--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/_leftMenu2.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/_leftMenu2.cshtml
@@ -76,7 +76,7 @@
                 </li>
                 <li>
                     <a href="@Url.Action("Index","NhanVienYTe") " class="d-flex">
-                        <p>Cập nhật nhân viên</p>
+                        <p>Danh sách nhân viên</p>
                     </a>
                 </li>
                 <li>
