--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/DonViLK/Details.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/DonViLK/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Models.ViewModel.NhanVienvaDVLKView
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Thông tin đơn vị";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
