--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DotToChucHM/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DotToChucHM/Index.cshtml
@@ -3,7 +3,7 @@
 @using System.Data;
 
 @{
-    ViewBag.Title = "Đợt tổ chức";
+    ViewBag.Title = "Đăng bài";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -13,7 +13,7 @@
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
                     <div class="breadcrumb_iner_item">
-                        <h2>Bài đăng</h2>
+                        <h2>Danh sách bài đăng</h2>
                     </div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
             </div>
             <div class="col-lg-8 mb-5 mb-lg-0">
                 <div class="col-lg-12 col-md-8">
-                    <h3 class="mb-30">Danh sách bài đăng </h3>
+                    <h3  >Danh sách bài đăng </h3>
                     <div class="panel-body">
                         @if (TempData["AlertMessage"] != null)
                         {
@@ -53,7 +53,7 @@
                                     <table class="mt-10">
                                         <tr>
                                             <th style="width:400px">
-                                                <input type="email" name="EMAIL" placeholder="Nội dung"
+                                                <input   placeholder="Nội dung"
                                                        onfocus="this.placeholder = ''" onblur="this.placeholder = 'Nội dung '" required
                                                        class="single-input">
                                             </th>
@@ -85,71 +85,79 @@
                             </a>
                         </div>
                     }
-                        <div class="main-card mb-3 card">
+                <div class="main-card mb-3 card">
 
-                            <table class="mb-0 table table-hover table table-bordered">
-                                <tr class="text-center">
-                                    <th>
-                                        STT
-                                    </th>
-                                    <th>
-                                        Tên đợt tổ chức
-                                    </th>
+                    <table class="mb-0 table table-hover table table-bordered">
+                        <tr class="text-center">
+                            <th>
+                                STT
+                            </th>
+                            <th>
+                                Tên đợt tổ chức
+                            </th>
 
-                                    <th>
-                                        Địa chỉ
-                                    </th>
-                                    <th>
-                                        Số lượng
-                                    </th>
-                                    <th>
-                                        Trạng thái
-                                    </th>
-                                    <th>
-                                        Chức năng
-                                    </th>
-                                </tr>
-                                @{ var i = 1;}
-                                @foreach (var item in Model)
-                                {
-                                    <tr>
-                                        <td>
-                                            @i
-                                        </td>
-                                        <td>
-                                            @item.tenDotHienMau
-                                        </td>
-                                        <td>
-                                            @item.diaChiToChuc
-                                        </td>
-                                        <td>
-                                            @item.soLuong
-                                        </td>
-                                        <td>
-                                            @item.trangThai
-                                        </td>
-                                   
-                                        <td>
-
-                                            <div>
-                                                <button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-alternate">Chọn</button>
-                                                <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu" x-placement="right-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(105px, 0px, 0px);">
-                                                    <button type="button" tabindex="0" class="dropdown-item pe-7s-pen"> @Html.ActionLink("Chỉnh sửa", "Edit", new { id = item.IdDTCHM })</button>
-                                                    <button type="button" tabindex="0" class="dropdown-item pe-7s-news-paper"> @Html.ActionLink("Chi tiết", "Details", new { id = item.IdDTCHM })</button>
-                                                    <button type="button" tabindex="0" class="dropdown-item pe-7s-trash"> @Html.ActionLink(" Xóa", "Delete", new { id = item.IdDTCHM })</button>
-                                                </div>
+                            <th>
+                                Địa chỉ
+                            </th>
+                            <th>
+                                Ngày tổ chức
+                            </th>
+                            <th>
+                                Chức năng
+                            </th>
+                        </tr>
+                        @{ var i = 1;}
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @i
+                                </td>
+                                <td style=" width: 200px;  word-wrap: break-word;">
+                                    @item.tenDotHienMau
+                                </td>
+                                <td style=" width: 200px;  word-wrap: break-word;">
+                                    @item.diaChiToChuc
+                                </td>
+                                <td>
+                                    @item.ngayToChuc
+                                </td>
+                                <td>
+                                    @if (item.ngayToChuc < DateTime.Now)
+                                    {
+                                        <div>
+                                            <button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-alternate">Chọn</button>
+                                            <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu" x-placement="right-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(105px, 0px, 0px);">
+                                                <button type="button" tabindex="0" class="dropdown-item pe-7s-news-paper"> @Html.ActionLink("Chi tiết", "Details", new { id = item.IdDTCHM })</button>
+                                                <button type="button" tabindex="0" class="dropdown-item pe-7s-news-paper"> @Html.ActionLink("Phân nhiệm vụ", "TaoNV", new { id = item.IdDTCHM })</button>
+                                                <button type="button" tabindex="0" class="dropdown-item pe-7s-trash"> @Html.ActionLink(" Xóa", "Delete", new { id = item.IdDTCHM })</button>
                                             </div>
-                                        </td>
-                                    </tr>
-                                    i++;
-                                }
-                            </table>
-                        </div>
-                        <nav class="blog-pagination justify-content-center d-flex">
-                            <ul class="pagination">
-                                @Html.PagedListPager(Model, page => Url.Action("Index", new { page, @searchString = ViewBag.SearchStringBV, @class = "page-link" }))
-                            </ul>
-                        </nav>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div>
+                                            <button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-alternate">Chọn</button>
+                                            <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu" x-placement="right-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(105px, 0px, 0px);">
+                                                <button type="button" tabindex="0" class="dropdown-item pe-7s-pen"> @Html.ActionLink("Chỉnh sửa", "Edit", new { id = item.IdDTCHM })</button>
+                                                <button type="button" tabindex="0" class="dropdown-item pe-7s-news-paper"> @Html.ActionLink("Chi tiết", "Details", new { id = item.IdDTCHM })</button>
+                                                <button type="button" tabindex="0" class="dropdown-item pe-7s-news-paper"> @Html.ActionLink("Phân nhiệm vụ", "TaoNV", new { id = item.IdDTCHM })</button>
+                                                <button type="button" tabindex="0" class="dropdown-item pe-7s-trash"> @Html.ActionLink(" Xóa", "Delete", new { id = item.IdDTCHM })</button>
+                                            </div>
+                                        </div>
+                                    }
+                                </td>
+                            </tr>
+                            i++;
+                        }
+                    </table>
+                    <nav class="blog-pagination justify-content-center d-flex">
+                        <ul class="pagination">
+                            @Html.PagedListPager(Model, page => Url.Action("Index", new { page, @searchString = ViewBag.SearchStringBV, @class = "page-link" }))
+                        </ul>
+                    </nav>
+                </div>
+                      
                         
                     </div>
             </div>
